@@ -1,0 +1,5 @@
+#' @param keep.pred [\code{logical(1)}]\cr
+#'   Keep the data in the \code{pred} slot of the results.
+#'   If you do many experiments these informations might only increase the size of your result file without being essential for your analyisis so you want to set this value on \code{FALSE}.
+#'   Default is \code{TRUE}.
+
